testing/macro-tests/tests/ui/insert_type_excludes_managed_field.stderr
error[E0560]: struct `UiEntity_Create` has no field named `created_at`
  --> tests/ui/insert_type_excludes_managed_field.rs:28:9
   |
28 |         created_at: Some(Timestamp::now()),
   |         ^^^^^^^^^^ `UiEntity_Create` does not have this field
   |
   = note: all struct fields are already assigned
